@@ -6,7 +6,7 @@ autoheader
 automake -a
 automake
 # Change ./configure options if needed
-./configure --enable-server --with-mysql --prefix=/home/zabbix/zabbix --with-net-snmp
-#./configure --prefix=/home/zabbix/zabbix
+#./configure --with-mysql --prefix=/home/zabbix/zabbix --with-net-snmp
+./configure --enable-agent --enable-server --with-mysql --prefix=/home/zabbix/zabbix --with-net-snmp
 make
 make install
